# Automatisation-du-TCO

./: .dockerignore  .env.example  .gitignore  DPGF LOT 01 - DESAMIANTAGE - CURAGE - GROS OEUVRE.xlsx  DPGF LOT 02 - MENUISERIES - SERRURERIE.xlsx  DPGF LOT 03 - PLATRERIE.xlsx  DPGF LOT 04 - REVETEMENT INTERIEUR ET EXTERIEUR - PEINTURE - SIGNALETIQUE.xlsx  DPGF LOT 05 - PLOMBERIE - CVC.xlsx  DPGF LOT 06 - ELECTRICITE.xlsx  Dockerfile  MAINTENANCE.md  README (1).md  TCO_Automator.spec  TCO_FINAL.xlsx  Thumbs.db  analyze_headers.py  analyze_template.py  app.py  check_lot.py  compare_templates.py  config.py  debug_dpgf.txt  debug_pytest.py  debug_sub.py  debug_tva.txt  deep_analyze_headers.py  diag_cas12.py  diag_entreprise.py  logger.py  pyproject.toml  render.yaml  requirements.txt  run_app.py  structure_analysis.txt  tco_final_detail.txt  test_all_merges.py  test_discrepancy.py  test_discrepancy_lot06.py  test_dpgf_06.py  test_e2e.py  (+10 more)
.github/workflows/: ci.yml  docker.yml  tests.yml
Autres_Formats/: DPGF OFFRE DE PRIX GECIP_EGLY.xlsm  Thumbs.db
Template_DPGF/LOT 12/: Thumbs.db
app/: __init__.py  controllers.py
core/: __init__.py  exporter.py  merger.py  parser_dpgf.py  parser_dpgf_pdf.py  parser_tco.py  test_exporter.py  utils.py
memory/: MEMORY.md
services/: __init__.py  file_validator.py  persistence.py
test_outputs/: test_styles.xlsx
tests/: conftest.py  test_controllers.py  test_exporter.py  test_file_validator.py  test_merger.py  test_option_merging_task21.py  test_parser_dpgf_alerts.py  test_parser_robustness.py  test_persistence.py  test_utils.py
tools/: compare_excel_style.py  generate_template_from_dpgf.py  style_rapport_reference.md  style_summary_script.py
