[project]
name = "tco-automator"
version = "2.2.0"
description = "Consolidation automatique des DPGF et remplissage du TCO"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.41.1",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
# Exclure les scripts de debug/diagnostic/test ad-hoc à la racine
# (non maintenus, hors périmètre de lint CI)
exclude = [
    "check_lot.py",
    "compare_templates.py",
    "debug_pytest.py",
    "debug_sub.py",
    "diag_cas12.py",
    "diag_entreprise.py",
    "test_all_merges.py",
    "test_discrepancy.py",
    "test_discrepancy_lot06.py",
    "test_dpgf_06.py",
    "test_e2e.py",
    "test_merge.py",
    "test_merge2.py",
    "test_merge3.py",
    "test_merge4.py",
    "test_minimal.py",
    "test_robustness.py",
    "test_tva.py",
    "test_tva_simple.py",
    "verify_fixes.py",
    "core/test_exporter.py",
    "tools",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S301",  # pickle (used only for legacy migration)
    "S603",  # subprocess
    "S607",  # starting with partial path
]

[tool.ruff.lint.per-file-ignores]
# Les tests pytest utilisent assert par conception — S101 non applicable
# S110 : try-except dans fixtures accepté
"tests/**" = ["S101", "S110", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
